RESOLVED FIXED 242707
AX: Adding a child to an AccessibilitySlider that has lost its renderer dynamically causes a crash
https://bugs.webkit.org/show_bug.cgi?id=242707
Summary AX: Adding a child to an AccessibilitySlider that has lost its renderer dynam...
Tyler Wilcock
Reported 2022-07-13 11:40:57 PDT
Adding a child to an AccessibilitySlider that has lost its renderer dynamically causes a crash
Attachments
Patch (6.12 KB, patch)
2022-07-13 15:15 PDT, Tyler Wilcock
no flags
Patch (7.88 KB, patch)
2022-07-13 16:53 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-07-13 11:41:08 PDT
Tyler Wilcock
Comment 2 2022-07-13 15:15:44 PDT
Tyler Wilcock
Comment 3 2022-07-13 16:53:50 PDT
EWS
Comment 4 2022-07-14 01:12:15 PDT
Committed 252444@main (c30b6646dc63): <https://commits.webkit.org/252444@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460873 [details].
Note You need to log in before you can comment on or make changes to this bug.