AX: Adding a child to an AccessibilitySlider that has lost its renderer dynamically causes a crash https://bugs.webkit.org/show_bug.cgi?id=242707

Reviewed by Chris Fleizach.

AccessibilitySlider::addChildren erroneously assumed that its m_renderer
could never go away, when in reality this can happen in a variety of
ways (e.g. dynamic style changes).

Test: LayoutTests/accessibility/slider-with-lost-renderer.html

* LayoutTests/accessibility/slider-with-lost-renderer-expected.txt: Added.
* LayoutTests/accessibility/slider-with-lost-renderer.html: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/glib/accessibility/slider-with-lost-renderer-expected.txt: Added.
* LayoutTests/platform/ios/accessibility/slider-with-lost-renderer-expected.txt: Added.
* LayoutTests/platform/win/accessibility/slider-with-lost-renderer-expected.txt: Added.
* Source/WebCore/accessibility/AccessibilitySlider.cpp:
(WebCore::AccessibilitySlider::addChildren):

Canonical link: https://commits.webkit.org/252444@main